--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ rvm:
 
 before_script:
     bundle exec rake db:create db:migrate db:schema:load
+
+before_script:
+  - psql -c "CREATE USER postgres WITH PASSWORD 'ce5x9ZbV-bXZacjWsmCYUPfvjI';" -U postgres
